CB-6282 Version based image choosing